--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="card-body">
                         <a href="https://www.traan.in" style="color:white;">
                             <img src="images/Group 29.svg" style="align-content:center; height:15vh;width:15vh; ">
-                            <h2 style="font-family: roboto;">Traan.in</h2>
+                            <h2 style="font-family: roboto;">Traan</h2>
                             </a>
                             <br><br>
                     <h2 class="title">Registration Info For Volunteers</h2>
